# turingosv3

./: .claudeignore  .gitignore  CLAUDE.md  Cargo.toml  Cargo.toml.patch  LIVING_HARNESS.md  README.md  VIA_NEGATIVA.md  get_volc_ep.py  planning_directive.md  project_topology.md  test.pid  test_100.pid  topology.md  update_bus.patch
.claude/: settings.json
autoresearch/: control_group.py  hourly_summary.py  launch_swarm.sh  monitor_swarm.sh  phase1_boundary_test.py  rescore_and_audit.py  run_scaling_experiment.py  scaling_matrix.json
experiments/hanoi_1m/: Cargo.toml
experiments/hanoi_1m/scripts/: start_tunnel.sh
experiments/hanoi_1m/src/: agent.rs  harness.rs  lib.rs  main.rs  swarm.rs  wal.rs
experiments/hanoi_1m/tests/: hanoi_1m_test.rs
handover/: 2026-03-30_architect-review-package.md  ALIGNMENT.md  README.md  audit-fix-plan-20260320.md  austrian_economics_patch_audit_20260318.md  boltzmann_retreat_audit_20260317.md  concurrency_cognitive_divergence_audit_20260315.md  cross_audit_report_20260319.md  engineering_lessons_20260314.md  extreme_purification_audit_20260317.md  inversion_of_control_pricing_audit_20260317.md  kv_cache_avalanche_audit_20260314.md  microkernel_harness_architecture_20260314.md  minif2f_data_contamination_audit_20260316.md  minif2f_mac_studio_crash_clues_20260316.md  minif2f_phase1_audit_20260316.md  minif2f_phase2_emergence_audit_20260316.md  minif2f_phase3_induction_audit_20260316.md  minif2f_scaling_law_design_20260316.md  minif2f_scaling_law_results_20260316.md  network_topology_and_ssh.md  paper_draft_minif2f_scaling.md  (+13 more)
(+326 files in other folders)
