[workspace]
members = [
    ".",
    "experiments/hanoi_1m",
    "experiments/minif2f_swarm",
    "experiments/zeta_regularization",
    "experiments/number_theory_min"
]

[package]
name = "turingosv3"
version = "0.1.0"
edition = "2021"

[dependencies]
libc = "0.2"
log = "0.4.29"
reqwest = { version = "0.13.2", features = ["json", "rustls"] }
serde_json = "1.0.149"
tokio = { version = "1.50.0", features = ["rt", "time", "macros", "rt-multi-thread"] }
