[package]
name = "hanoi_1m"
version = "0.1.0"
edition = "2021"

[dependencies]
turingosv3 = { path = "../../" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4"
reqwest = { version = "0.13.2", features = ["json", "blocking"] }
tokio = { version = "1.50.0", features = ["full"] }
log = "0.4.29"
env_logger = "0.11.9"
